<resources>
    <string name="app_name">EventManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="planit">Planit</string>
    <string name="let_s_make_it_happen">Let\'s Make it Happen!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="privacy_policy_ncopyright_2024_dukodevs">Privacy Policy\nCopyright © 2024 | DukoDevs</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="chose_your_role">Chose Your Role:</string>
    <string name="personal_information">Personal Information:</string>
    <string name="fill_in_your_information">Fill in your information:</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birth_date">Date of Birth</string>
    <string name="final_preview">Final Preview:</string>
    <string name="input_your_email_here_to_get_the_password_reset_link">Input your email here to get the password reset link</string>
    <string name="no_worries_we_got_you_covered">No worries we got you covered</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="password_reset_email_sent">Password reset email sent!</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="my_events">My Events</string>
    <string name="profileVisibility">Profile Visibility</string>
    <string name="profile">Profile</string>
    <string name="search_event">Search Event</string>
    <string name="missed">Missed</string>
    <string name="up_coming">Up-Coming</string>
    <string name="on_going">On-Going</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="user_loaction">User Loaction</string>
    <string name="reset_password">Reset Password?</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="your_personal_information">Your personal information:</string>
    <string name="update">Update</string>
    <string name="favorites">Favorites</string>
    <string name="no_events_found">No Events Found</string>
    <string name="login_with_google">Login with Google</string>
    <string name="client_server_key">711227771945-hh6kfdkstur1lps7s7nrlds1ndtot2of.apps.googleusercontent.com</string>
    <string name="api_key_">AIzaSyB7EIFMRQe-9Ijp2e-Bjwy6PnZ6ksByABg</string>
    <string name="add_event">add event</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="category">Category</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>

    <string name="api_key">AIzaSyAF0XYFjRnYUMwoi4VRLuhDYM0OF7MWq7M</string>
    <string name="date_range">Date Range?</string>
    <string name="users">Users</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="new_">New</string>
    <string name="expired">Expired</string>
    <string name="banned_users">Banned Users</string>
    <string name="user_management">User Management</string>
    <string name="ban_user">Ban User?</string>
    <string name="send_invites">Send Invites</string>
    <string name="sent_invites">Sent Invites</string>
    <string name="open_events">Open Events</string>
    <string name="closed_events">Closed Events</string>
</resources>